# cholula

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ovapi/: main.py
ovapi/apicalls/: extract_to_db.py
ovapi/configuration/: assets.py  setup_loggers.py
ovapi/datacatalog/: dialect_datacatalog.py
ovapi/dbapi/: orm.py
ovapi/utils/: tools.py
templates/scripts/: echoer.sh
templates/stages/: buildspec.yml
