[tool.poetry]
name = "ovapi"
version = "0.1.0"
description = ""
authors = ["abaiz <b.mohamedachraf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
backoff = "1.11.1"
certifi = "2022.9.24"
charset-normalizer = "2.0.12"
greenlet = "2.0.1"
idna = "3.4"
numpy = "1.19.5"
pandas = "0.25.3"
psycopg2-binary = "2.9.5"
python-dateutil = "2.8.2"
pytz = "2022.4"
requests = "2.27.1"
six = "1.16.0"
sqlalchemy = "1.4.44"
tenacity = "8.1.0"
urllib3 = "1.26.12"
click = "^8.1.3"
colorlog = "^6.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
vulture = "^2.6"
pre-commit = "^2.20.0"
toml = "^0.10.2"
sphinx = "^5.3.0"

[tool.black]
line-length = 132
target-version = ['py37', 'py38', 'py39', 'py310' ]
include = '(ovapi\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | \.poetry
  | build
  | dist
  | docs
  | notes
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ovapi = "ovapi.main:cli"
